# kali-agents-mcp

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.MD  CONTRIBUTING.md  DEVELOPMENT_MEMO.md  Dockerfile  FORENSIC_TEST_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_ANALYSIS.md  README.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_IMPLEMENTATION.md  SECURITY_REVIEW.md  SPECIALIZED_AGENTS.md  TEST_GUIDE_FORENSIC.md  demo copy.py  demo.py  docker-compose.yml  examples.md  mcp_config.json  memory.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_demo.py  setup.sh  standalone_supervisor.py  test.sh
.claude/agents/: agent-creator.md  coverage-enforcer.md  mcp-security-validator.md  parser-generator.md  pydantic-agent-builder.md  security-docs-generator.md  unit-test-generator.md
.github/: SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/codeql/: codeql-config.yml
.github/workflows/: changelog.yml  codeql.yml  openssf-scorecard.yml  pytest.yml  scorecard.yml  security.yml  slsa-provenance.yml  tests.yml  update-pinned-deps-uvx.yml
docs/: dependency-management.md  forensic-server-api.md  vulnerability-server-api.md
plan/: 01-critical-priorities.md  02-code-quality-architecture.md  03-testing-qa.md  04-documentation.md  05-dependencies-security.md  06-devops-cicd.md  07-features-functionality.md  08-performance-scalability.md  09-user-experience.md  10-maintenance-operations.md  METRICS.md  QUICK-WINS.md  README.md  ROADMAP.md
src/: __init__.py
src/agents/: __init__.py  supervisor.py
src/api/: __init__.py  dependencies.py  main.py  security.py
src/api/routers/: __init__.py  network.py  web.py
src/cli/: main.py
src/config/: __init__.py  settings.py
src/db/: connection.py
src/mcp_servers/: data_server.py  forensic_server.py  network_server.py  report_server.py  social_server.py  vulnerability_server.py  web_server.py
src/models/: __init__.py  core.py  ml_algorithms.py
tests/: conftest.py  conftest.pyiz  pytest_asyncio.py  test_api_endpoints.py  test_data_server.py  test_forensic_server.py  test_fuzzy_logic.py  test_ml_algorithms.py  test_network_server.py  test_network_server_parsers.py  test_supervisor_agent.py  test_vulnerability_server.py  test_web_server_additional.py  test_web_server_parsers.py  test_web_server_tools.py
